# org.webosports.app.phone

./: .gitignore  CMakeLists.txt  README.md  TODO  appinfo.json  debug.html  index.html  phone-app.html  phoneapp.qmlproject
data/: CMakeLists.txt  appinfo.json
deploy/org.webosports.app.settings/: index.html
enyo/tools/: deploy.js
files/sysbus/: org.webosports.app.phone.json.prv.in
files/tweaks/: org.webosports.app.phone.json
qml/: main-desktop.qml  main.qml
qml/AppTweaks/: AppTweaks.qml
qml/model/: CallGroupItems.qml  CallHistory.qml  Contact.qml  ContactsModel.qml  FavoritesModel.qml  FilteredContactsModel.qml
source/: App.js  Backend.js  PhoneApp.js  package.js  utils.js
src/: CMakeLists.txt  PhoneApp.pro  config.h.in  main.cpp  phoneapplication.cpp  phoneapplication.h
src/qml/: PhoneUiTheme.qml  main.qml
src/qml/content/: AcceptButton.qml  ActiveCallDialog.qml  CallModel.qml  CommCallModel.qml  Dialer.qml  HistoryPage.qml  NumPad.qml  NumPadButton.qml  NumberEntry.qml  PeopleModel.qml  Person.qml  PhoneTabView.qml  PhoneTabViewStyle.qml  RejectButton.qml  VoiceCall.qml  VoiceCallManager.qml
src/qml/model/: CallHistory.qml  Contact.qml  Favouites.qml
src/qml/services/: ContactManager.qml  OfonoManager.qml  TelephonyManager.qml  VoiceCall.qml  VoiceCallManager.qml
src/qml/views/: AcceptButton.qml  ActiveCallDialog.qml  CallDialogToolButton.qml  DialButton.qml  Dialer.qml  DisconnectButton.qml  FavouritePage.qml  HistoryPage.qml  IncomingCallDialog.qml  IncomingRejectButton.qml  IncommingAcceptButton.qml  IncommingCallDialog.qml  KeypadButton.qml  MuteButton.qml  NumPad.qml  NumPadButton.qml  NumberEntry.qml  PhoneTabView.qml  PhoneTabViewStyle.qml  RejectButton.qml  SIMPin.qml  SpeakerButton.qml
(+71 files in other folders)
